chore: complete comment and avatar components

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-	background: #8d8d99;
+	background: #29292e;
 }
 
 body::-webkit-scrollbar-thumb {
